# collections-attribution-model

./: Makefile  Pipfile  README.md  attributionmodel.json  attributionmodel.yaml  environment.sh  requirements.txt  setup.cfg  setup.py
ontologies/: cro.ttl  vivo.ttl
src/metadata_converter/: __init__.py  darwincore.py
tests/: test_darwincore.py
