##########################
# Setup.py Configuration #
##########################
[metadata]
name = collections_attribution
version = 0.0.1-dev
description = Interdisciplinary metamodel for attributions metadata
long_description = file: README.rst

# URLs associated with the project
url = https://github.com/diatomsRcool/collections-attribution-model
download_url = https://github.com/diatomsRcool/collections-attribution-model/releases
project_urls =
    Bug Tracker = https://github.com/diatomsRcool/collections-attribution-model/issues
    Source Code = https://github.com/diatomsRcool/collections-attribution-model
    Documentation = https://collections-attribution-model.readthedocs.io

# Author information
author = Anne Thessen
author_email = annethessen@gmail.com
maintainer = Anne Thessen
maintainer_email = annethessen@gmail.com

# License Information
license = BDS-3-Clause
license_file = LICENSE

# Search tags
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering :: Chemistry
keywords =
    Ontologies
    Indexing

[options]
install_requires =
    click
    dataclasses
    pandas
    biolinkml

# Random options
zip_safe = false
include_package_data = True
python_requires = >=3.6

# Where is my code
packages = find:
package_dir =
    = src

[options.packages.find]
where = src

[options.extras_require]
jupyter =
    jinja2
    ipython
docs =
    sphinx
    sphinx-rtd-theme
    sphinx-click
    sphinx-autodoc-typehints

[options.entry_points]
console_scripts =
    expando = collections-attribution-model.expando:main

######################
# Doc8 Configuration #
# (doc8.ini)         #
######################
[doc8]
max-line-length = 120

##########################
# Coverage Configuration #
# (.coveragerc)          #
##########################
[coverage:run]
branch = True
source = collections-attribution-model
omit =
    src/collections-attribution-model/__main__.py
    tests/*
    docs/*
    scripts/*

[coverage:paths]
source =
    src/collections-attribution-model
    .tox/*/lib/python*/site-packages/collections-attribution-model

[coverage:report]
show_missing = True
exclude_lines =
    def __str__
    def __repr__